added ability to find border tiles to a shape